# wasmtime

./: Cargo.toml  build.rs
api/cranelift/prelude/: trait.InstBuilder.html
api/cranelift_codegen/: constant.VERSION.html
api/cranelift_codegen/ir/: trait.InstBuilder.html
api/cranelift_interpreter/state/: enum.MemoryError.html
api/cranelift_interpreter/step/: enum.ControlFlow.html  enum.CraneliftTrap.html  enum.StepError.html  fn.step.html  index.html
api/cranelift_interpreter/value/: enum.ValueError.html
api/src/cranelift_interpreter/: step.rs.html
crates/cli-flags/src/: lib.rs
crates/component-macro/: Cargo.toml
crates/component-macro/src/: bindgen.rs  component.rs  lib.rs
crates/component-util/src/: lib.rs
crates/environ/src/: component.rs  fact.rs  trap_encoding.rs
crates/fuzzing/: Cargo.toml
crates/fuzzing/src/: generators.rs  oracles.rs
crates/misc/component-test-util/: Cargo.toml
crates/misc/component-test-util/src/: lib.rs
crates/misc/component-util/: Cargo.toml
crates/runtime/src/: component.rs  traphandlers.rs
crates/wasi-http/src/: bindings.rs  body.rs  lib.rs  types.rs  types_impl.rs
crates/wasi-keyvalue/src/: lib.rs
crates/wasi-nn/wit/: wasi-nn.wit
crates/wasi-preview1-component-adapter/src/: descriptors.rs  lib.rs  spin.rs
crates/wasi-runtime-config/: Cargo.toml
crates/wasi/src/: ctx.rs  (+3 more)
crates/wasmtime/: Cargo.toml
fuzz/: Cargo.toml  build.rs
fuzz/fuzz_targets/: dynamic_component_api.rs  static_component_api.rs
scripts/: publish.rs
src/: common.rs
src/commands/: serve.rs
tests/all/: component_model.rs
(+69 files in other folders)
