[package]
name = "component-test-util"
authors = ["The Wasmtime Project Developers"]
license = "Apache-2.0 WITH LLVM-exception"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.19", optional = true }
wasmtime = { path = "../../wasmtime", optional = true }
arbitrary = { version = "1.1.0", features = ["derive"], optional = true }

[features]
default = []
component-model = ["wasmtime/component-model", "dep:anyhow", "dep:arbitrary"]
